升级依赖，更新打包方式

--- a/package.json
+++ b/package.json
@@ -30,19 +30,28 @@
     "appId": "com.cn.littlestrong.demo",
     "asar": false
   },
+  "authors": [
+    "Williamnie <yebeixiaohai@gmail.com>"
+  ],
   "scripts": {
     "start": "npm run build-main-dev && run-electron ./dist/main/main.js",
     "start:main": "electron-webpack dev",
-    "start:renderer": "cross-env APP_ROOT=src/renderer umi dev",
+    "start:renderer": "cross-env APP_ROOT=src/renderer PORT=8090 umi dev",
     "build-main-prod": "NODE_ENV=production webpack --config ./build/webpack.main.prod.config.js",
     "build-main-dev": "NODE_ENV=development webpack --config ./build/webpack.main.config.js",
     "build:renderer": "cross-env APP_ROOT=src/renderer umi build",
     "watch": "tsc -w",
     "lint": "tslint -c tslint.json -p tsconfig.json",
     "debug:main": "run-electron --inspect=5858 -w ./dist/main/main.js",
-    "pack": "npm run build:renderer && npm run build-main-prod && electron-builder --dir",
-    "exe": "electron-builder --win",
     "dist": "electron-builder",
+    "---- 自动根据操作系统平台构建包 ----": "---- 自动根据操作系统平台构建包 ----",
+    "pack": "npm run build:renderer && npm run build-main-prod && electron-builder --dir",
+    "---- 构建三个操作系统平台包 ----": "---- 构建三个操作系统平台包 ----",
+    "pack-all": "npm run build:renderer && npm run build-main-prod && electron-builder -mwl",
+    "---- 构建 mac 操作系统平台包 ----": "---- 构建 mac 操作系统平台包 ----",
+    "pack-mac": "npm run build:renderer && npm run build-main-prod && electron-builder -m",
+    "---- 构建 windows 操作系统平台包 ----": "---- 构建 windows 操作系统平台包 ----",
+    "pack-exe": "npm run build:renderer && npm run build-main-prod && electron-builder --win",
     "prettier": "prettier --list-different \"./**/*.{ts,tsx,js,jsx,less}\""
   },
   "keywords": [
@@ -54,27 +63,21 @@
     "demo"
   ],
   "devDependencies": {
-    "axios": "^0.19.2",
-    "classnames": "^2.2.6",
-    "cross-env": "^5.1.1",
-    "electron": "^8.0.0",
-    "electron-builder": "^22.3.2",
-    "electron-debug": "^3.0.1",
-    "electron-webpack": "^2.7.4",
-    "moment-locales-webpack-plugin": "^1.1.2",
-    "prettier": "1.19.0",
-    "prop-types": "^15.7.2",
-    "query-string": "^6.10.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1",
+    "classnames": "^2.3.1",
+    "cross-env": "^7.0.3",
+    "electron": "^14.0.0",
+    "electron-builder": "^22.11.7",
+    "electron-debug": "^3.2.0",
+    "electron-webpack": "^2.8.2",
+    "prettier": "^2.3.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "run-electron": "^1.0.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
-    "umi": "^3.2.1",
+    "umi": "^3.5.17",
     "webpack": "4.41.5",
-    "webpack-cli": "^3.3.10",
     "webpack-merge": "^4.2.2",
-    "@umijs/preset-react": "^1.5.2"
+    "@umijs/preset-react": "^1.8.22"
   },
   "dependencies": {},
   "electronWebpack": {
