--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "demo"
   ],
   "devDependencies": {
+    "@douyinfe/semi-ui": "^2.0.2",
     "classnames": "^2.3.1",
     "cross-env": "^7.0.3",
     "electron": "^14.0.0",
@@ -75,8 +76,7 @@
     "run-electron": "^1.0.0",
     "umi": "^3.5.17",
     "webpack": "4.41.5",
-    "webpack-merge": "^4.2.2",
-    "@umijs/preset-react": "^1.8.22"
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {},
   "electronWebpack": {
