--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
   "scripts": {
     "start": "npm run build-main-dev && run-electron ./dist/main/main.js",
     "start:main": "electron-webpack dev",
-    "start:renderer": "cross-env APP_ROOT=src/renderer PORT=8090 umi dev",
+    "start:renderer": "cross-env APP_ROOT=src/renderer PORT=8090 umipro dev",
     "build-main-prod": "NODE_ENV=production webpack --config ./build/webpack.main.prod.config.js",
     "build-main-dev": "NODE_ENV=development webpack --config ./build/webpack.main.config.js",
-    "build:renderer": "cross-env APP_ROOT=src/renderer umi build",
+    "build:renderer": "cross-env APP_ROOT=src/renderer umipro build",
     "watch": "tsc -w",
     "lint": "tslint -c tslint.json -p tsconfig.json",
     "debug:main": "run-electron --inspect=5858 -w ./dist/main/main.js",
@@ -63,6 +63,7 @@
     "demo"
   ],
   "devDependencies": {
+    "@umijs/pro": "^4.0.0-rc.1",
     "classnames": "^2.3.1",
     "cross-env": "^7.0.3",
     "electron": "^14.0.0",
@@ -73,10 +74,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "run-electron": "^1.0.0",
-    "umi": "^3.5.17",
     "webpack": "4.41.5",
-    "webpack-merge": "^4.2.2",
-    "@umijs/preset-react": "^1.8.22"
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {},
   "electronWebpack": {
